--- a/trunk/Sandbox/src/main/resources/jdbc.properties
+++ b/trunk/Sandbox/src/main/resources/jdbc.properties
@@ -5,8 +5,8 @@ jdbc.username=root
 jdbc.password=
 
 #jdbc.url=jdbc:mysql://sgnhp.snos.ru:3306/workflowdb
-#jdbc.username=wfdbuser
-#jdbc.password=vfitymrf
+#jdbc.username=
+#jdbc.password=
 
 jdbc.initialPoolSize=10
 jdbc.minPoolSize=1
