--- a/WorkflowProject/trunc/src/main/resources/jdbc.properties
+++ b/WorkflowProject/trunc/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/workflowdb
 jdbc.url=jdbc:mysql://office.salavatmed.ru:3306/workflowdb
-jdbc.username=wfdbuser
-jdbc.password=wfdbuser
+jdbc.username=
+jdbc.password=
 
 jdbc.initialPoolSize=10
 jdbc.minPoolSize=1
