--- a/SkyTelecom/trunc/src/main/resources/jdbc.properties
+++ b/SkyTelecom/trunc/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/skyteldb
 jdbc.url=jdbc:mysql://192.168.124.100:3306/skyteldb
 jdbc.username=skyteldbuser
-jdbc.password=skyteldbuser
+jdbc.password=
 
 jdbc.initialPoolSize=10
 jdbc.minPoolSize=1
